--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="images/stock-photo-funny-cat-in-round-sunglasses-close-up-1158137110.jpg">
+					<img id="profile_pic" src="images/20220212_1129166.jpg">
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-options-wrapper">
